prow/knative/cluster/400-deck.yaml
# Copyright 2019 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deck
  namespace: default
  labels:
    app: deck
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: "deck"
      terminationGracePeriodSeconds: 30
      containers:
      - name: deck
        image: gcr.io/k8s-prow/deck:v20211012-ba1fa86530
        args:
        - --hook-url=http://hook:8888/plugin-help
        - --tide-url=http://tide/
        - --spyglass
        - --rerun-creates-job
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --plugin-config=/etc/plugins/plugins.yaml
        - --kubeconfig=/etc/kubeconfig/config
        - --oauth-url=/github-login
        - --cookie-secret=/etc/cookie/secret
        - --github-oauth-config-file=/etc/github/secret
        - --github-token-path=/etc/githubtoken/oauth
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        ports:
          - name: http
            containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
        - name: oauth-config
          mountPath: /etc/github
          readOnly: true
        - name: oauth-token
          mountPath: /etc/githubtoken
          readOnly: true
        - name: cookie-secret
          mountPath: /etc/cookie
          readOnly: true
        - name: kubeconfig
          mountPath: /etc/kubeconfig
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: plugins
        configMap:
          name: plugins
      - name: oauth-config
        secret:
          secretName: github-oauth-config-secret
      - name: oauth-token
        secret:
            secretName: oauth-token
      - name: cookie-secret
        secret:
          secretName: cookie-secret
      - name: kubeconfig
        secret:
          defaultMode: 0644
          secretName: kubeconfig
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deck
  name: deck
  namespace: default
spec:
  selector:
    app: deck
  ports:
  - name: main
    port: 80
    targetPort: 8080
  - name: metrics
    port: 9090
  type: NodePort
